--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -4,7 +4,33 @@
   justify-content: center;
   align-items: center;
   padding: 0 30px;
-  height: 800px;
+  height: 100vh;
+  width: 100%;
   position: relative;
+  object-fit: contain;
   z-index: 1;
+}
+
+#heroBg{
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#heroVid{
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+  z-index: -1;
+  background: #232a34;
+}
+#title{
+  color: #ffffff;
+  z-index: 2;
 }
