--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -1,22 +1,34 @@
-.navbar{
-  background:transparent;
+.navContainer{
+  background: transparent;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size:1.2rem;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
+  z-index: 10;
   transition: background .3s;
   transition-timing-function: linear;
 }
+.navybar{
+  display: flex;
+  justify-content: space-between;
+  height: 80px;
+  z-index: 1;
+  width: 100%;
+  max-width: 2000px;
+  padding: 0 24px;
+}
 
-.navbar.active{
+.navContainer.active{
   background: #000;
   
 }
 
-.navLogo{
+.navyLogo{
+  float: left;
   color:#fff;
   justify-self: flex-start;
   font-size: 1.5rem;
@@ -27,6 +39,10 @@
   text-decoration: none;
 }
 
-.navbar-nav{
-  margin-left: 40px;
+.menu-icon{
+  display:flex;
+  z-index: 11;
+  color: #fff;
+  width: 20px;
+  height: 20px
 }
