--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -79,12 +79,42 @@
 }
 
 @media screen and (max-width: 960px){
+.navMenu{
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  position:absolute;
+  top: 80px;
+  left: 100%;
+  opacity: 1;
+  transition: all 0.5s ease;
+}
+
+.navMenu.active{
+  left: 0;
+  padding-left: 0;
+  opacity: 1;
+  z-index: 1;
+  background:#242222;
+}
+.navLinks{
+ text-align: center;
+ display:table;
+ width: 100%;
+ padding: 2rem;
+}
+.navLinks:hover{
+  background-color: #fff;
+  color: #242424;
+  border: 0;
+}
 .menu-icon {
   display: block;
   position: absolute;
   top: 0;
   right: 0;
-  transform: translate(-100%, 60%);
+  transform: translate(-100%, 50%);
   font-size: 1.8rem;
   cursor: pointer;
   }
@@ -93,6 +123,10 @@
   color:#fff;
 }
 .navyLogo{
-  padding-bottom: 0rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(25%, 50%);
+  
 }
 }
