--- a/src/components/MenuCard.css
+++ b/src/components/MenuCard.css
@@ -1,19 +1,42 @@
 
 .menu-card{
   display:grid;
-  max-width: 25rem;
+  max-width: 40rem;
   justify-content: center;
   gap: 1rem 2rem;
+  grid-template-columns: 225px 1fr;
 }
-.photo-card{
 
-}
 .photo{
   width: 100%;
-  height: 200px;
+  height: 150px;
   object-fit: cover;
   display:block;
 }
-.price{
-  display:inline;
+.menu-text header{
+  display:flex;
+  justify-content: space-between;
+  border-bottom: .5px dotted #617d98;
+}
+.menu-text h5{
+font-size: 1rem;
+margin-bottom: 0.5rem;
+}
+.item-text{
+  margin-bottom: 0;
+  padding-top: 1rem;
+  font-size: .9rem;
+}
+@media screen and (max-width: 960px){
+  .menu-card{
+    max-width: 25rem;
+    display:grid;
+    grid-template-columns: none;
+  }
+  .photo{
+    height: 200px;
+  }
+  .menu-text h5 {
+    font-size: 1.5rem;
+  }
 }
