--- a/src/components/MenuCard.css
+++ b/src/components/MenuCard.css
@@ -5,8 +5,12 @@
   justify-content: center;
   gap: 1rem 2rem;
   grid-template-columns: 225px 1fr;
+  transition: all 1s linear;
 }
-
+.menu-card-disabled{
+  transition: all 1s linear;
+  display:none;
+}
 .photo{
   width: 100%;
   height: 150px;
