--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -7,7 +7,7 @@
   height: 100vh;
   width: 100%;
   position: relative;
-  object-fit: contain;
+  object-fit: cover;
   z-index: 1;
   
 }
@@ -61,4 +61,16 @@
   border: 1px solid white;
   width:100%;
   z-index: 2;
+}
+#hero-underline{
+  background:#c59d5f;
+  height: 0.25rem;
+  width: 100%;
+  border-bottom: 2px ;
+  margin: 0;
+}
+@media screen and (max-width: 960px){
+ #heroContainer{ height: 100vh;
+  width: 100%;
+ }
 }
