--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -2,7 +2,7 @@
   background: #dadada;
 }
 .menu-component{
-  margin-bottom: 3rem;
+  
   padding-top:10rem;
   padding-bottom: 5rem;
   min-height: 900px;
@@ -31,6 +31,9 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom:15px;
+}
+#bottom-outline{
+  margin-top: 3rem;
 }
 .btn-container{
   margin-bottom: 4rem;
@@ -65,6 +68,10 @@
 .menu-items{
   max-width: 90vw;
   grid-template-columns: none;
+}
+.btn-container{
+  display: grid;
+  grid-template-columns: auto auto;
 }
 .filter-btn{
   margin:0 0.10rem;
